--- a/samplesHistogramsTutorial.ipynb
+++ b/samplesHistogramsTutorial.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Simple histograms\n"
+    "# Tutorial: Simple histograms\n
+    ## Laurent Parmentier-deLeon, Marco Arieli Herrera-Valdez
+    ### Facultad de Ciencias, Universidad Nacional Autónoma de México
+    " 
    ]
   },
   {
