--- a/samplesHistogramsTutorial.ipynb
+++ b/samplesHistogramsTutorial.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Simple histograms\n"
-    "## Laurent Parmentier-deLeon, Marco Arieli Herrera-Valdez"
-    "### Facultad de Ciencias, Universidad Nacional Autónoma de México"
+    "# Tutorial: Simple histograms\n",
+    "## Laurent Parmentier-deLeon, Marco Arieli Herrera-Valdez\n",
+    "### Facultad de Ciencias, Universidad Nacional Autónoma de México\n"
     " 
    ]
   },
