--- a/samplesHistogramsTutorial.ipynb
+++ b/samplesHistogramsTutorial.ipynb
@@ -5,9 +5,8 @@
    "metadata": {},
    "source": [
     "# Tutorial: Simple histograms\n",
-    "## Laurent Parmentier-deLeon, Marco Arieli Herrera-Valdez\n",
+    "## Laurent Parmentier, Marco Arieli Herrera-Valdez\n",
     "### Facultad de Ciencias, Universidad Nacional Autónoma de México\n"
-    " 
    ]
   },
   {
