--- a/exponentialDecayWithPulses.ipynb
+++ b/exponentialDecayWithPulses.ipynb
@@ -296,30 +296,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numerical solution of a linear equation with pulsed forcing\n"
-    "Copyright (C) 2017 Marco Arieli Herrera Valdez\n"
+    "Numerical solution of a linear equation with pulsed forcing\n",
+    "Copyright (C) 2017 Marco Arieli Herrera Valdez\n\n",
+    "This program is free software: you can redistribute it and/or modify\n",
+    "it under the terms of the GNU General Public License as published by\n",
+    "the Free Software Foundation, either version 3 of the License, or\n",
+    "(at your option) any later version.\n\n",
 
-    "This program is free software: you can redistribute it and/or modify\n"
-    "it under the terms of the GNU General Public License as published by\n"
-    "the Free Software Foundation, either version 3 of the License, or\n"
-    "(at your option) any later version.\n"
+    "This program is distributed in the hope that it will be useful,\n",
+    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
+    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
+    "GNU General Public License for more details.\n\n",
 
-    "This program is distributed in the hope that it will be useful,\n"
-    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n"
-    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n"
-    "GNU General Public License for more details.\n"
-
-    "You should have received a copy of the GNU General Public License\n\n"
-    "along with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
-    "Prof. Marco Arieli Herrera Valdez,\n"
-    "Departamento de Matemáticas, Oficina 232\n"
-"Facultad de Ciencias, Universidad Nacional Autónoma de México\n"
-"+52 55 56223899 ext 45757, +52 55 56224868 (oficina auxiliar) \n"
-"E-mail: marcoh@ciencias.unam.mx\n"
-"Página institucional: fciencias.unam.mx/directorio/82718\n"
-"Página personal: mahv13.wordpress.com\n"
-"Research gate: www.researchgate.net/profile/Marco_Herrera-Valdez\n"
-"Seminario de Biología Matemática: www.seminariobiologiamatematicaunam.wordpress.com\n"
+    "You should have received a copy of the GNU General Public License\n\n",
+    "along with this program.  If not, see <http://www.gnu.org/licenses/>.\n",
+    "Prof. Marco Arieli Herrera Valdez,\n",
+    "Departamento de Matemáticas, Oficina 232\n",
+"Facultad de Ciencias, Universidad Nacional Autónoma de México\n",
+"+52 55 56223899 ext 45757, +52 55 56224868 (oficina auxiliar) \n",
+"E-mail: marcoh@ciencias.unam.mx\n",
+"Página institucional: fciencias.unam.mx/directorio/82718\n",
+"Página personal: mahv13.wordpress.com\n",
+"Research gate: www.researchgate.net/profile/Marco_Herrera-Valdez\n",
+"Seminario de Biología Matemática: www.seminariobiologiamatematicaunam.wordpress.com\n",
 "Twitter: @brujonildo\n"
    ]
   }
