--- a/exponentialDecayWithPulses.ipynb
+++ b/exponentialDecayWithPulses.ipynb
@@ -284,18 +284,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#Copyright Notice:\n\n",
     "Numerical solution of a linear equation with pulsed forcing\n",
     "Copyright (C) 2017 Marco Arieli Herrera Valdez\n\n",
     "This program is free software: you can redistribute it and/or modify\n",
